# json-eater-1

./: .gitignore  Cargo.toml  README.md  setup.py
.github/workflows/: pypi.yaml
json_eater/: __init__.py  version.py
notebooks/: Schema Testing.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
scripts/: build-push-prerelease.sh
src/: lib.rs  pq.rs  sample.rs
