[package]
name = "json-eater"
version = "0.1.0"
authors = ["Kartik Thakore <kartik@doc.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
parquet = "3.0.0"
pyo3 = { version = "0.13.2" , features = ["extension-module"] }
pythonize = "0.13.0"
rayon = "1.5.0"
serde = {version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
uuid = "0.8.2"

[lib]
name = "json_eater"
crate-type = ["cdylib"]
